--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,8 +12,8 @@ inherit_from:
   - .rubocop/strict.yml
 
 inherit_gem:
-  prettier: rubocop.yml
   standard: config/base.yml
+  syntax_tree: config/rubocop.yml
 
 AllCops:
   NewCops: enable
